# yahtzee

./: CHANGELOG.md  README.md  install.ps1  install.sh  pyproject.toml
.github/workflows/: ci.yml
data/: state_values_free_joker.npz  state_values_official.npz  state_values_simple.npz
relay/: docker-compose.yml  relay.py
tests/: conftest.py  test_coach_winmode.py  test_net.py  test_scoring.py  test_solver.py  test_ui_smoke.py
tools/: arena.py  simulate.py
yahtzee_app/: __init__.py  __main__.py  bots.py  coach.py  config.py  game.py  hints.py  net.py  update.py  winmode.py
yahtzee_app/solver/: __init__.py  build.py  core.py  oracle.py  tables.py
yahtzee_app/ui/: app.py
